--- a/.gitmodules
+++ b/.gitmodules
@@ -4,4 +4,4 @@
 
 [submodule "bmi-calc-extended"]
 	path = bmi-calc-extended
-	url = https://github.com/tom-wasi/bmi-calc-ext.git
+	url = https://github.com/tom-wasi/bmi-calc-ext
