--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "bmi-calc"]
-	path = bmi-calc
-	url = https://github.com/tom-wasi/bmi-calc.git
+  path = bmi-calc
+  url = https://github.com/tom-wasi/bmi-calc.git
+
 [submodule "bmi-calc-extended"]
-	path = bmi-calc-extended
-	url = https://github.com/tom-wasi/bmi-calc-ext
+  path = bmi-calc-extended
+  url = https://github.com/tom-wasi/bmi-calc-extended.git
