--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,7 @@
 [submodule "bmi-calc"]
-  path = include/bmi-calc
-  url = git://github.com/tom-wasi/bmi-calc.git
+	path = bmi-calc
+	url = https://github.com/tom-wasi/bmi-calc.git
 
 [submodule "bmi-calc-extended"]
-  path = include/bmi-calc-extended
-  url = git://github.com/tom-wasi/bmi-calc-ext.git
+	path = bmi-calc-extended
+	url = https://github.com/tom-wasi/bmi-calc-ext.git
